# nsui_banner_fixer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  dependencies.cmake  main.py
.github/workflows/: ubuntu.yml  windows.yml
patches/: 3dstool.patch  ctr.patch  subprocess.patch  tclap.patch
src/: CMakeLists.txt  CMakelists.txt  Ctrtool_cia_proc.cpp  Ctrtool_cia_proc.hpp  Game.cpp  Game.hpp  LICENSE  Settings.hpp  Tool.cpp  Tool.hpp  compile.bat  globals.hpp  main.py  nsui_banner_fixer.cpp  nsui_banner_fixer.hpp  setup.py  tests.py
test/: CMakeLists.txt  CMakelists.txt  test_fix_banner.cpp  test_get_version.cpp  test_v27.cia  test_v28.cia
tests/: test_main.py
